# G-Mouse-USB-GPS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: 01_basic_read.py  02_zmq_server.py  03_zmq_client.py  04_async_stream.py  05_wait_for_fix.py
gps_mouse/: __init__.py  api.py  cli.py  config.py  exceptions.py  gpsd.py  logger.py  models.py  mqtt.py  publisher.py  reader.py  subscriber.py
systemd/: gps-mouse.service
tests/: test_models.py  test_publisher.py  test_reader.py  test_subscriber.py
